# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  configurations.yml  docker-compose.yml  sonar-project.properties
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
