[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Krisztian Gado <85160134+gadokrisztian@users.noreply.github.com>"]
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"

[dev-dependencies]
reqwest = "0.11.16"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
